--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
 
     defaultConfig {
         applicationId "CS7455.Team5.dashyy"
-        minSdkVersion 16
+        minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -22,6 +22,12 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+    }
+
+    //Required for Material Components
+    repositories {
+        google()
+        jcenter()
     }
 
 }
@@ -43,6 +49,10 @@ dependencies {
     //    implementation 'com.google.firebase:firebase-auth-ktx:19.3.1'
     implementation 'com.google.firebase:firebase-auth:19.3.1'
 
+    //Required for GoogleMaps
     implementation 'com.google.android.gms:play-services-base:7.3.0'
     implementation 'com.google.android.gms:play-services-location:7.3.0'
+
+    //Required for Material Components
+    implementation 'com.google.android.material:material:<version>'
 }
