--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,7 @@ dependencies {
 
     //Required for Material Components
     implementation 'com.google.android.material:material:<version>'
+    //    implementation 'com.google.firebase:firebase-auth-ktx:19.3.1'
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
 }
